# Thermca

./: .gitignore  README.rst  linux_env.lock.yml  linux_env.yml  linux_x86_env.lock.yml  linux_x86_env.yml  macos_arm64_env.lock.yml  macos_env.yml  macos_x86_env.lock.yml  pyproject.toml  windows_env.lock.yml  windows_env.yml  windows_x86_env.lock.yml  windows_x86_env.yml
docs/: Makefile  conf.py  create_part_meshes.rst  index.rst  libraries.rst  make.bat  quickstart.rst  thermca_api.rst
docs/examples/: Cooling coffee infrared temperature measurement.csv  basic_butter.ipynb  bearing.ipynb  coffeecup.ipynb  cutting_disc.ipynb  flow_heater.ipynb  getting_started.ipynb  heat_transfer_on_skin.ipynb  mug.STEP  mug_salome.med  teacup_fem.ipynb
thermca/: __init__.py  baseelements.py  input.py  links.py  materials.py  mesh.py  model.py  network.py  pointnodes.py  progressbar.py  resultdata.py  shortfloat.py  solver.py  source.py  static_bcs.py  tetwild.py  vector3d.py
thermca/_utils/: __init__.py  class_tools.py  func_tools.py  lazy_loader.py  sparse.py  sparse_dok_indexer.py
thermca/fem/: fe_part.py  fe_system.py  ffe_io.py  mor_io.py
thermca/lib/: ball_screw.py  bearing.py  combd_film.py  contact.py  evaporation.py  fluids.py  forced_conv.py  free_conv.py  linear_guiding.py  lp_parts.py  radiation.py  solids.py
thermca/lpm/: asm.py  cube.py  cyl.py  lp_construction.py  lp_cube.py  lp_cyl.py  lp_io.py  lp_link_surf.py  lp_part.py  lp_system.py
thermca/plot/: asm.py  lp_sys.py  mesh.py  model.py  primitives.py  result.py
thermca/tests/: __init__.py  constr_cyl.msh  (+24 more)
